--- a/views/choosestusucess.ejs
+++ b/views/choosestusucess.ejs
@@ -9,9 +9,9 @@
     <title><%= title %></title>
 
     <!-- Bootstrap -->
-    <link rel='stylesheet' href='/stylesheets/bootstrap.min.css' />
-	<link rel='stylesheet' href='/stylesheets/style.css' />
-	<link rel='stylesheet' href='/stylesheets/bootstrapValidator.min.css' />
+  <link rel='stylesheet' href='/xys/stylesheets/bootstrap.min.css' />
+	<link rel='stylesheet' href='/xys/stylesheets/style.css' />
+	<link rel='stylesheet' href='/xys/stylesheets/bootstrapValidator.min.css' />
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -30,7 +30,7 @@
 <div class="container" >
 	<div class="row">
 		<div class="col-lg-9 col-md-9 col-sm-12 col-xs-12">
-          <img src="../images/szucsselogo.png" class="img-responsive" alt="">  
+          <img src="../xys/images/szucsselogo.png" class="img-responsive" alt="">  
         </div>
         <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
 		 <!--  <div style="min-height: 70px;"></div> -->
@@ -38,10 +38,16 @@
 	</div>
 
 	<div class="row" style=" padding:0 15px;">
-		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="background-color: #5cb85c;text-align: center;font-size: 20px; line-height: 24px;">
-			<p style="text-align: center;">选择成功！ <span class="glyphicon glyphicon-ok"  ></span></p>
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="background-color: #00B7FF;text-align: center;font-size: 20px; line-height: 24px;">
+			选择成功！ <span class="glyphicon glyphicon-ok"  ></span>
 		</div>
 	</div>
+
+  <div class="row">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+      <span class="pull-right"><a href="/xys/majorlist">返回专业列表</a></span>
+    </div>
+  </div>
 
 	<div class="row uniform">
         <form class="form-horizontal">
@@ -59,14 +65,14 @@
             </div>
           </div>
 
-          <div class="form-group" style="height: 0;overflow: hidden;">
+          <div class="form-group" style="display: none;">
             <label for="stuXueHao" class="col-lg-5 col-md-5 col-sm-5 col-xs-12 control-label">辅导学生学号</label>
             <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12">
               <input type="text" class="form-control" id="stuXueHao" name="stuXueHao" readonly="readonly">
             </div>
           </div>
           
-          <div class="form-group" style="height: 0;overflow: hidden;">
+          <div class="form-group" style="display: none;">
             <label for="code" class="col-lg-5 col-md-5 col-sm-5 col-xs-12 control-label">课程编号</label>
             <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 meeting_info" id="meeting_date_time">
               <input type="text" class="form-control" id="code" name="code" readonly="readonly">
@@ -95,17 +101,17 @@
           </div>
 
           <div class="form-group">
-            <label for="meeting_nianji" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 control-label" style="text-align: center;">请填写并确认你的信息</label>
+            <label for="meeting_nianji" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 control-label" style="text-align: center;">下面是你的信息</label>
           </div>
 
-          <div class="form-group" style="height: 0;overflow: hidden;">
+          <div class="form-group" style="display: none;">
             <label for="xuehao" class="col-lg-5 col-md-5 col-sm-5 col-xs-12 control-label">学号</label>
             <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 meeting_info" id="meeting_date_time">
               <input type="text" class="form-control" id="xuehao" name="xuehao" readonly="readonly">
             </div>
           </div>
 
-          <div class="form-group" style="height: 0;overflow: hidden;">
+          <div class="form-group" style="display: none;">
             <label for="gender" class="col-lg-5 col-md-5 col-sm-5 col-xs-12 control-label">性别</label>
             <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 meeting_info" id="meeting_date_time">
               <input type="text" class="form-control" id="gender" name="gender" readonly="readonly">
@@ -129,25 +135,35 @@
           <div class="form-group">
             <label for="contact" class="col-lg-5 col-md-5 col-sm-5 col-xs-12 control-label">手机号码</label>
             <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 meeting_info" id="people_noo">
-              <input type="text" class="form-control" id="contact" name="contact" >
+              <input type="text" class="form-control" id="contact" name="contact" readonly="readonly">
             </div>
           </div>
 
           <div class="form-group">
             <label for="beizhu" class="col-lg-5 col-md-5 col-sm-5 col-xs-12 control-label">备注</label>
 	          <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 meeting_info" id="">
-	              <textarea class="form-control" rows="2" id="beizhu"  name="beizhu" placeholder="可为空"></textarea>
+	              <textarea class="form-control" rows="2" id="beizhu"  name="beizhu" placeholder="" readonly="readonly"></textarea>
 	           </div>
 	       </div>
           
-          <div class="form-group">
+          <!-- <div class="form-group">
             <div class="col-lg-offset-5 col-md-offset-5 col-sm-offset-5  col-lg-5 col-md-5 col-sm-5 col-xs-5 ">
               <button type="submit" class="btn btn-success" id="now-submit">确认选择该学生</button>
             </div>
-          </div>
+          </div> -->
 
         </form>
       </div>
+
+    <div class="row" style="height: 20px;">
+        <hr style="height:1px;border:none;border-top:1px dashed #5cb85c;" />
+    </div>
+
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="text-align: center;">
+           <span>2017 © 计算机与软件学院</span>
+        </div>
+    </div>
 
 	<!-- <div class="row text-center">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -156,10 +172,10 @@
 	</div> -->
 </div>
 
-    <script src="/javascripts/jquery-1.11.2.min.js"></script>
-    <script src="/javascripts/bootstrap.min.js"></script>
-    <script src="/javascripts/bootstrap-paginator.min.js"></script>
-    <script type="text/javascript" src='/javascripts/bootstrapValidator.min.js' ></script>
+    <script src="/xys/javascripts/jquery-1.11.2.min.js"></script>
+    <script src="/xys/javascripts/bootstrap.min.js"></script>
+    <script src="/xys/javascripts/bootstrap-paginator.min.js"></script>
+    <script type="text/javascript" src='/xys/javascripts/bootstrapValidator.min.js' ></script>
     <script type="text/javascript">
     function GetQueryString(name)
 	{
@@ -187,12 +203,12 @@
           $('#teachPlace').val(temp_result.teachPlace)
           $('#teachTime').val(temp_result.teachTime)
           $('#stuPhoneNum').val(temp_result.stuPhoneNum)
-          
+          $('#contact').val(temp_result.xuekunshengContact)
+          $('#beizhu').val(br2nl((temp_result.xuekunshengbeizhu)))
           $('#xiaoyuankahao').val('<%= student.alias %>')
           $('#name').val('<%= student.cn %>') 
           $('#gender').val('<%= student.gender %>') 
           $('#xuehao').val('<%= student.user %>')
-	      
 	      
     })
 	</script>
