--- a/views/foot.ejs
+++ b/views/foot.ejs
@@ -1,4 +1,4 @@
-    <script src="/javascripts/jquery-1.11.2.min.js"></script>
-    <script src="/javascripts/bootstrap.min.js"></script>
+    <script src="/xys/javascripts/jquery-1.11.2.min.js"></script>
+    <script src="/xys/javascripts/bootstrap.min.js"></script>
   </body>
 </html>
