--- a/views/head.ejs
+++ b/views/head.ejs
@@ -9,8 +9,8 @@
     <title><%= title %></title>
 
     <!-- Bootstrap -->
-    <link rel='stylesheet' href='/stylesheets/bootstrap.min.css' />
-	  <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/xys/stylesheets/bootstrap.min.css' />
+	  <link rel='stylesheet' href='/xys/stylesheets/style.css' />
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
