--- a/views/choosestusucess.ejs
+++ b/views/choosestusucess.ejs
@@ -80,9 +80,9 @@
           </div>
 
           <div class="form-group">
-            <label for="teachPlace" class="col-lg-5 col-md-5 col-sm-5 col-xs-12 control-label">辅导地点</label>
+            <label for="stuGender" class="col-lg-5 col-md-5 col-sm-5 col-xs-12 control-label">性别</label>
             <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 meeting_info" id="meeting_date_time">
-              <input type="text" class="form-control" id="teachPlace" name="teachPlace" readonly="readonly">
+              <input type="text" class="form-control" id="stuGender" name="stuGender" readonly="readonly">
             </div>
           </div>
 
@@ -200,7 +200,7 @@
           $('#stuName').val(temp_result.stuName)
           $('#code').val(temp_result.code)
           $('#stuXueHao').val(temp_result.stuXueHao)
-          $('#teachPlace').val(temp_result.teachPlace)
+          $('#stuGender').val(temp_result.stuGender)
           $('#teachTime').val(temp_result.teachTime)
           $('#stuPhoneNum').val(temp_result.stuPhoneNum)
           $('#contact').val(temp_result.xuekunshengContact)
