--- a/views/majorlist.ejs
+++ b/views/majorlist.ejs
@@ -39,7 +39,7 @@
           <img src="../xys/images/szucsselogo.png" class="img-responsive" alt="">  
         </div>
         <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
-		  <div style="min-height: 70px;"></div>
+		  <!-- <div style="min-height: 70px;"></div> -->
         </div>
 	</div>
 
@@ -57,7 +57,7 @@
 
 	<div class="row">
 		<% majorlist.forEach(function(item){ %>
-			<div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 ">
+			<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 ">
 			 <a href="/xys/majorstu?code=<%=item.code%>">
 			  <div class="majorlist">
 			  	<span class="glyphicon glyphicon-book" style="color:black;font-size:22px;"> <%=item.majorName%></span>
