--- a/views/mychoose.ejs
+++ b/views/mychoose.ejs
@@ -60,6 +60,7 @@
 				  		<%if(item.dang == '党员'){%>(党员)<%}%>
 				  	</li>
 				    <li class="list-group-item">学号：<%=item.stuXueHao%></li>
+				    <li class="list-group-item">性别：<%=item.stuGender%></li>
 				    <li class="list-group-item">电话：<%=item.stuPhoneNum%></li>
 				    <li class="list-group-item">辅导地点：<%=item.teachPlace%></li>
 				    <li class="list-group-item">辅导时间：<%=item.teachTime%></li>
