--- a/views/mystu.ejs
+++ b/views/mystu.ejs
@@ -58,6 +58,7 @@
 				  <ul class="list-group list-group-flush">
 				  	<li class="list-group-item">姓名：<%=item.xuekunshengName%></li>
 				    <li class="list-group-item">学号：<%=item.xuekunshengxuehao%></li>
+				    <li class="list-group-item">性别：<%=item.xuekunshengGender%></li>
 				    <li class="list-group-item">电话：<%=item.xuekunshengContact%></li>
 				    <li class="list-group-item">备注：<%=item.xuekunshengbeizhu%></li>
 				  </ul>
