--- a/views/choosestu.ejs
+++ b/views/choosestu.ejs
@@ -80,9 +80,9 @@
           </div>
 
           <div class="form-group">
-            <label for="teachPlace" class="col-lg-5 col-md-5 col-sm-5 col-xs-12 control-label">辅导地点</label>
+            <label for="stuGender" class="col-lg-5 col-md-5 col-sm-5 col-xs-12 control-label">性别</label>
             <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 meeting_info" id="meeting_date_time">
-              <input type="text" class="form-control" id="teachPlace" name="teachPlace" readonly="readonly">
+              <input type="text" class="form-control" id="stuGender" name="stuGender" readonly="readonly">
             </div>
           </div>
 
@@ -190,7 +190,7 @@
           $('#stuName').val(temp_result.stuName)
           $('#code').val(temp_result.code)
           $('#stuXueHao').val(temp_result.stuXueHao)
-          $('#teachPlace').val(temp_result.teachPlace)
+          $('#stuGender').val(temp_result.stuGender)
           $('#teachTime').val(temp_result.teachTime)
           $('#stuPhoneNum').val(temp_result.stuPhoneNum)
           
@@ -233,7 +233,8 @@
                 xiaoyuankahao = $('#xiaoyuankahao').val(),
                 gender = $('#gender').val(),
                 xuehao = $('#xuehao').val(),
-                name = $('#name').val()
+                name = $('#name').val(),
+                stuGender = $('#stuGender').val()
 
             console.log('check args-->',stuXueHao,code,contact,beizhu,xiaoyuankahao,gender,xuehao)
             //提交
@@ -250,7 +251,8 @@
                 xiaoyuankahao:xiaoyuankahao,
                 gender:gender,
                 xuehao:xuehao,
-                name : name
+                name : name,
+                stuGender : stuGender
               },
 
               success: function(result){
