1016_导出学困生选课情况

--- a/views/choosestu.ejs
+++ b/views/choosestu.ejs
@@ -155,6 +155,22 @@
         </form>
       </div>
 
+    <div class="row">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="margin-top: 5px;">
+        <span><strong style="color: red;">备注：</strong>完成选课后，可以自主选择上课地点。学校各处的自习室，文科楼、教学楼、理工楼、宿舍区的自习室、院楼4楼414及6楼的624小课室、学院8楼教职工之家、10楼的学生活动中心等都可以作为上课地点。(如需要在院楼的场所进行上课可联系辅导员进行申请。)</span>
+      </div>
+    </div>
+
+    <div class="row" style="height: 20px;">
+        <hr style="height:1px;border:none;border-top:1px dashed #5cb85c;" />
+    </div>
+
+    <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="text-align: center;">
+            <span>2017 © 计算机与软件学院</span>
+        </div>
+    </div>
+
 	<!-- <div class="row text-center">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 			<div id="page"></div>
