--- a/views/mychoose.ejs
+++ b/views/mychoose.ejs
@@ -62,7 +62,7 @@
 				    <li class="list-group-item">学号：<%=item.stuXueHao%></li>
 				    <li class="list-group-item">性别：<%=item.stuGender%></li>
 				    <li class="list-group-item">电话：<%=item.stuPhoneNum%></li>
-				    <li class="list-group-item">辅导地点：<%=item.teachPlace%></li>
+				    
 				    <li class="list-group-item">辅导时间：<%=item.teachTime%></li>
 				  </ul>
 				</div>			
@@ -74,6 +74,12 @@
 		        <img src="../xys/images/none.jpg" class="img-responsive" alt="" style="clear: both;margin: auto;">  
 		    </div>
 		<% } %>	
+	</div>
+
+	<div class="row">
+		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="margin-top: 5px;">
+			<span><strong style="color: red;">备注：</strong>完成选课后，可以自主选择上课地点。学校各处的自习室，文科楼、教学楼、理工楼、宿舍区的自习室、院楼4楼414及6楼的624小课室、学院8楼教职工之家、10楼的学生活动中心等都可以作为上课地点。(如需要在院楼的场所进行上课可联系辅导员进行申请。)</span>
+		</div>
 	</div>
 
 	<div class="row" style="height: 20px;">
