--- a/views/mystu.ejs
+++ b/views/mystu.ejs
@@ -75,7 +75,7 @@
 
 	<div class="row">
 		<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="margin-top: 5px;">
-			<span><strong style="color: red;">备注：</strong>完成选课后，可以自主选择上课地点。学校各处的自习室，文科楼、教学楼、理工楼、宿舍区的自习室、院楼4楼414及6楼的624小课室、学院8楼教职工之家、10楼的学生活动中心等都可以作为上课地点。(如需要在院楼的场所进行上课可联系辅导员进行申请。)</span>
+			<span><strong style="color: red;">备注：</strong>完成选课后，请学优生主动联系小组成员确定上课时间和上课地点。学校各处的自习室，文科楼、教学楼、理工楼、宿舍区的自习室、院楼4楼414、418及6楼的624小课室、学院8楼教职工之家、10楼的学生活动中心等都可以作为上课地点。（如需要在院楼的场所进行上课可联系辅导员进行申请。）</span>
 		</div>
 	</div>
 
